Mobile version complete

--- a/index.html
+++ b/index.html
@@ -6,8 +6,115 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vinh La</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    
+<header>
+    <!-- Top Navigation Menu -->
+<nav class="topnav">
+    <a href="#home" class="logo">VKL</a>
+    <div id="myLinks">
+    <ul>
+        <li><a href="https://github.com/VinhKietLa">GITHUB</a></li>
+        <li><a href="https://www.linkedin.com/in/vinhkietla/">LINKEDIN</a></li>
+        <li><a href="https://drive.google.com/file/d/1YpcsbtHs68Fg6feIsVKfOb9XeVjdXN3S/view?usp=sharing" target="_blank">RESUME</a></li>
+        <li><a href="mailto:kietla@live.co.uk">CONTACT</a></li>
+    </ul>
+    </div>
+    <a href="javascript:void(0);" class="nav-burger-icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+</nav>
+</header>
+
+<main>
+    <!-- Hero Image and contact -->
+<section>
+    <div class="hero-text">
+        <h1>I am Vinh</h1>
+        <p>An aspiring web developer 💪</p>
+        <button class="contact-me-btn">Contact me</button>
+        <img class="pictureofme" src="./images/pictureofme.png" alt="A picture of Vinh">
+    </div>
+</section>
+
+    <!-- About me -->
+<section>
+    <div class="about-me">
+        <h2>About me</h2>
+        <p>Over the past 5 years, I’ve gained experienced in various high-growth start ups as a customer support agent</p>
+    </div>
+</section>
+
+    <!-- My Skillsets -->
+    <section>
+        <div class="my-skillsets">
+            <h2 class="skillset-header">My Skillsets</h2>
+            <div class="coding-skills">
+                <img class="code-icon" src="/images/coding.png" alt="A picture of a computer screen with code on display">
+                <ul>
+                    <li>CSS</li>
+                    <li>Javascript</li>
+                    <li>Github</li>
+                    <li>Terminal</li>
+                    <li>Bootstrap</li>
+                </ul>
+            </div>
+            <div class="designer-skills">
+                <img class="graphic-designer" src="/images/graphic-designer.png" alt="A picture of a computer screen with a paintbrush on display">
+                <ul>
+                    <li>Adobe XD</li>
+                    <li>Figma</li>
+                    <li>Sketch</li>
+                    <li>Design Systems</li>
+                </ul>
+            </div>
+            <div class="technical-support">
+                <img class="technical-image" src="/images/technical-support.png" alt="A picture of headphones and microphone">
+                <ul>
+                    <li>Excellent communicator</li>
+                    <li>Problem solver</li>
+                    <li>Product knowledge</li>
+                    <li>Team-player</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <!-- Personal projects -->
+    <section>
+        <div class="personal-projects">
+            <h2 class="projects-header">Personal projects</h2>
+            <div class="contact-form">
+                <h4>Contact Form - HTML/CSS</h4>
+                <a href="https://vinhkietla.github.io/contactform/">
+                <img class="contact-form" src="/images/contact-form.png" alt="A picture of my contact form landing page"> </a>
+            </div>
+            <div class="blackjack-game">
+                <h4>Blackjack Game - HTML/CSS/JS</h4>
+                <a href="https://vinhblackjack.netlify.app/">
+                <img class="blackjack-game" src="/images/blackjack-game.png" alt="A picture of my blackjack-game landing page">
+                </a>
+            </div>
+            <div class="weight-converter">
+                <h4>Weight Converter - HTML/CSS/JS</h4>
+                <a href="https://vinhkietla.github.io/weightheightconverter/"></a>
+                <img class="weight-converter" src="/images/weight-converter.png" alt="A picture of my weight-converter landing page">
+            </a>
+            </div>
+            <div class="rdx-landing-page">
+                <h4>RDX Landing page - HTML/CSS</h4>
+                <a a href="https://vinhkietla.github.io/ProductLandingPage/"></a>
+                <img class="weight-converter" src="/images/rdx-landing-page.png" alt="A picture of my rdx landing page">
+            </a>
+            </div>
+        </div>
+    </section>
+</main>
+
+<footer>
+    <p><a class="footer-contact" href="mailto:kietla@live.co.uk">Contact me</a></p>
+  </footer>    
 </body>
+<script src="index.js"></script>
 </html>
