fixed broken images

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="my-skillsets">
             <h2 class="skillset-header">My Skillsets</h2>
             <div class="coding-skills">
-                <img class="code-icon" src="/images/coding.png" alt="A picture of a computer screen with code on display">
+                <img class="code-icon" src="./images/coding.png" alt="A picture of a computer screen with code on display">
                 <ul>
                     <li>CSS</li>
                     <li>Javascript</li>
@@ -61,7 +61,7 @@
                 </ul>
             </div>
             <div class="designer-skills">
-                <img class="graphic-designer" src="/images/graphic-designer.png" alt="A picture of a computer screen with a paintbrush on display">
+                <img class="graphic-designer" src="./images/graphic-designer.png" alt="A picture of a computer screen with a paintbrush on display">
                 <ul>
                     <li>Adobe XD</li>
                     <li>Figma</li>
@@ -70,7 +70,7 @@
                 </ul>
             </div>
             <div class="technical-support">
-                <img class="technical-image" src="/images/technical-support.png" alt="A picture of headphones and microphone">
+                <img class="technical-image" src="./images/technical-support.png" alt="A picture of headphones and microphone">
                 <ul>
                     <li>Excellent communicator</li>
                     <li>Problem solver</li>
@@ -88,24 +88,24 @@
             <div class="contact-form">
                 <h4>Contact Form - HTML/CSS</h4>
                 <a href="https://vinhkietla.github.io/contactform/">
-                <img class="contact-form" src="/images/contact-form.png" alt="A picture of my contact form landing page"> </a>
+                <img class="contact-form" src="./images/contact-form.png" alt="A picture of my contact form landing page"> </a>
             </div>
             <div class="blackjack-game">
                 <h4>Blackjack Game - HTML/CSS/JS</h4>
                 <a href="https://vinhblackjack.netlify.app/">
-                <img class="blackjack-game" src="/images/blackjack-game.png" alt="A picture of my blackjack-game landing page">
+                <img class="blackjack-game" src="./images/blackjack-game.png" alt="A picture of my blackjack-game landing page">
                 </a>
             </div>
             <div class="weight-converter">
                 <h4>Weight Converter - HTML/CSS/JS</h4>
                 <a href="https://vinhkietla.github.io/weightheightconverter/"></a>
-                <img class="weight-converter" src="/images/weight-converter.png" alt="A picture of my weight-converter landing page">
+                <img class="weight-converter" src="./images/weight-converter.png" alt="A picture of my weight-converter landing page">
             </a>
             </div>
             <div class="rdx-landing-page">
                 <h4>RDX Landing page - HTML/CSS</h4>
                 <a a href="https://vinhkietla.github.io/ProductLandingPage/"></a>
-                <img class="weight-converter" src="/images/rdx-landing-page.png" alt="A picture of my rdx landing page">
+                <img class="weight-converter" src="./images/rdx-landing-page.png" alt="A picture of my rdx landing page">
             </a>
             </div>
         </div>
