added new mobile, tablet and desktop styles

--- a/index.html
+++ b/index.html
@@ -88,24 +88,24 @@
             <div class="contact-form">
                 <h4>Contact Form - HTML/CSS</h4>
                 <a href="https://vinhkietla.github.io/contactform/">
-                <img class="contact-form" src="./images/contact-form.png" alt="A picture of my contact form landing page"> </a>
+                <img class="contact-form-img" src="./images/contact-form.png" alt="A picture of my contact form landing page"> </a>
             </div>
             <div class="blackjack-game">
                 <h4>Blackjack Game - HTML/CSS/JS</h4>
                 <a href="https://vinhblackjack.netlify.app/">
-                <img class="blackjack-game" src="./images/blackjack-game.png" alt="A picture of my blackjack-game landing page">
+                <img class="blackjack-game-img" src="./images/blackjack-game.png" alt="A picture of my blackjack-game landing page">
                 </a>
             </div>
             <div class="weight-converter">
                 <h4>Weight Converter - HTML/CSS/JS</h4>
                 <a href="https://vinhkietla.github.io/weightheightconverter/"></a>
-                <img class="weight-converter" src="./images/weight-converter.png" alt="A picture of my weight-converter landing page">
+                <img class="weight-converter-img" src="./images/weight-converter.png" alt="A picture of my weight-converter landing page">
             </a>
             </div>
             <div class="rdx-landing-page">
                 <h4>RDX Landing page - HTML/CSS</h4>
                 <a a href="https://vinhkietla.github.io/ProductLandingPage/"></a>
-                <img class="weight-converter" src="./images/rdx-landing-page.png" alt="A picture of my rdx landing page">
+                <img class="rdx-landing-page-img" src="./images/rdx-landing-page.png" alt="A picture of my rdx landing page">
             </a>
             </div>
         </div>
