added a jump link and fixed some styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="https://www.linkedin.com/in/vinhkietla/">LINKEDIN</a></li>
                     <li><a href="https://drive.google.com/file/d/1YpcsbtHs68Fg6feIsVKfOb9XeVjdXN3S/view?usp=sharing"
                             target="_blank">RESUME</a></li>
-                    <li><a href="mailto:kietla@live.co.uk">CONTACT</a></li>
+                    <li><a href="#my-projects">PROJECTS</a></li>
                 </ul>
             </div>
             <a href="javascript:void(0);" class="nav-burger-icon" onclick="myFunction()">
@@ -45,23 +45,23 @@
         <section>
             <div class="about-me">
                 <h2>About me</h2>
-                <p>Over the past 5 years, I’ve gained experienced in various high-growth start ups as a customer support
-                    agent</p>
+                <p>Over the past 5 years, I’ve gained valuable experienced in various high-growth start ups as a customer support
+                    agent.</p>
             </div>
         </section>
 
         <!-- My Skillsets -->
         <section>
             <div class="my-skillsets">
-                <h2 class="skillset-header">My Skillsets</h2>
+                <h2 class="skillset-header">My skillsets</h2>
                 <div class="coding-skills">
                     <img class="code-icon" src="./images/coding.png"
                         alt="A picture of a computer screen with code on display">
                     <ul>
-                        <li>CSS</li>
+                        <li>HTML</li>
                         <li>Javascript</li>
+                        <li>CSS</li>
                         <li>Github</li>
-                        <li>Terminal</li>
                         <li>Bootstrap</li>
                     </ul>
                 </div>
@@ -72,7 +72,7 @@
                         <li>Adobe XD</li>
                         <li>Figma</li>
                         <li>Sketch</li>
-                        <li>Design Systems</li>
+                        <li>Design systems</li>
                     </ul>
                 </div>
                 <div class="technical-support">
@@ -91,7 +91,7 @@
         <!-- Personal projects -->
         <section>
             <div class="personal-projects">
-                <h2 class="projects-header">Personal projects</h2>
+                <h2 id="my-projects" class="projects-header"> <a id="my-projects">My projects</a></h2>
                 <div class="contact-form">
                     <h4>Contact Form - HTML/CSS</h4>
                     <a href="https://vinhkietla.github.io/contactform/">
@@ -127,7 +127,7 @@
     </main>
 
     <footer>
-        <p><a class="footer-contact" href="mailto:kietla@live.co.uk">Contact me</a></p>
+        <button class="contact-me-btn">Contact me</button>
     </footer>
 </body>
 <script src="index.js"></script>
