--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section>
             <div class="about-me">
                 <h2>About me</h2>
-                <p>Over the past 5 years, I’ve gained valuable experienced in various high-growth start ups as a customer support
+                <p>Over the past 5 years, I’ve gained valuable experience in various high-growth start ups as a customer support
                     agent.</p>
             </div>
         </section>
@@ -93,14 +93,14 @@
             <div class="personal-projects">
                 <h2 id="my-projects" class="projects-header"> <a id="my-projects">My projects</a></h2>
                 <div class="contact-form">
-                    <h4>Contact Form - HTML/CSS</h4>
-                    <a href="https://vinhkietla.github.io/contactform/">
-                        <img class="contact-form-img" src="./images/contact-form.png"
+                    <h4 class="overlay">Contact Form</h4>
+                    <a class="thumbnail"href="https://vinhkietla.github.io/contactform/">
+                        <img class="contact-form-img thumbnail" src="./images/contact-form.png"
                             alt="A picture of my contact form landing page"> </a>
                 </div>
 
                 <div class="blackjack-game">
-                    <h4>Blackjack Game - HTML/CSS/JS</h4>
+                    <h4 class="overlay">Blackjack Game</h4>
                     <a href="https://vinhblackjack.netlify.app/">
                         <img class="blackjack-game-img" src="./images/blackjack-game.png"
                             alt="A picture of my blackjack-game landing page">
@@ -108,7 +108,7 @@
                 </div>
 
                 <div class="weight-converter">
-                    <h4>Weight Converter - HTML/CSS/JS</h4>
+                    <h4 class="overlay">Weight Converter</h4>
                     <a href="https://vinhkietla.github.io/weightheightconverter/"> <img class="weight-converter-img"
                             src="./images/weight-converter.png" alt="A picture of my weight-converter landing page">
                     </a>
@@ -116,7 +116,7 @@
                 </div>
 
                 <div class="rdx-landing-page">
-                    <h4>RDX Landing page - HTML/CSS</h4>
+                    <h4 class="overlay">RDX Landing page</h4>
                     <a a href="https://vinhkietla.github.io/ProductLandingPage/"> <img class="rdx-landing-page-img"
                             src="./images/rdx-landing-page.png" alt="A picture of my rdx landing page">
                     </a>
