touching up some styles and contact me button now working

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             <div class="hero-text">
                 <h1>I am Vinh</h1>
                 <p>An aspiring web developer 💪</p>
+                <a href="mailto:kietla@live.co.uk">
                 <button class="contact-me-btn">Contact me</button>
+                </a>
                 <img class="pictureofme" src="./images/pictureofme.png" alt="A picture of Vinh">
             </div>
         </section>
@@ -114,7 +116,6 @@
                     </a>
                     </a>
                 </div>
-
                 <div class="rdx-landing-page">
                     <h4 class="overlay">RDX Landing page</h4>
                     <a a href="https://vinhkietla.github.io/ProductLandingPage/"> <img class="rdx-landing-page-img"
@@ -127,8 +128,9 @@
     </main>
 
     <footer>
-        <button class="contact-me-btn">Contact me</button>
-    </footer>
+        <a href="mailto:kietla@live.co.uk">
+            <button class="contact-me-btn">Contact me</button>
+            </a>    </footer>
 </body>
 <script src="index.js"></script>
 
