added technical acceptance changes to navbar links

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
         <nav class="topnav">
             <a href="#home" class="logo">VKL</a>
             <div id="myLinks">
-                <ul>
+                <ul>                    
+                    <li><a href="#aboutMe">ABOUT ME</a></li>
+                    <li><a href="#contactMe">CONTACT ME</a></li>
                     <li><a href="https://github.com/VinhKietLa">GITHUB</a></li>
                     <li><a href="https://www.linkedin.com/in/vinhkietla/">LINKEDIN</a></li>
                     <li><a href="https://drive.google.com/file/d/1YpcsbtHs68Fg6feIsVKfOb9XeVjdXN3S/view?usp=sharing"
                             target="_blank">RESUME</a></li>
-                    <li><a href="#my-projects">PROJECTS</a></li>
+                    <li><a href="#my-projects">MY WORK</a></li>
                 </ul>
             </div>
             <a href="javascript:void(0);" class="nav-burger-icon" onclick="myFunction()">
@@ -34,7 +36,7 @@
         <!-- Hero Image and contact -->
         <section>
             <div class="hero-text">
-                <h1>I am Vinh</h1>
+                <h1 id="#contactMe">I am Vinh</h1>
                 <p>An aspiring web developer 💪</p>
                 <a href="mailto:kietla@live.co.uk">
                 <button class="contact-me-btn">Contact me</button>
@@ -45,7 +47,7 @@
 
         <!-- About me -->
         <section>
-            <div class="about-me">
+            <div class="about-me" id="aboutMe">
                 <h2>About me</h2>
                 <p>Over the past 5 years, I’ve gained valuable experience in various high-growth start ups as a customer support
                     agent.</p>
@@ -93,7 +95,7 @@
         <!-- Personal projects -->
         <section>
             <div class="personal-projects">
-                <h2 id="my-projects" class="projects-header"> <a id="my-projects">My projects</a></h2>
+                <h2 id="my-projects" class="projects-header"> <a id="my-projects">My work</a></h2>
                 <div class="contact-form">
                     <h4 class="overlay">Contact Form</h4>
                     <a class="thumbnail"href="https://vinhkietla.github.io/contactform/">
