added nav text changes

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <a href="#home" class="logo">VKL</a>
             <div id="myLinks">
                 <ul>                    
-                    <li><a href="#aboutMe">ABOUT ME</a></li>
-                    <li><a href="#contactMe">CONTACT ME</a></li>
+                    <li><a href="#aboutMe">ABOUT-ME</a></li>
+                    <li><a href="#contactMe">CONTACT-ME</a></li>
                     <li><a href="https://github.com/VinhKietLa">GITHUB</a></li>
                     <li><a href="https://www.linkedin.com/in/vinhkietla/">LINKEDIN</a></li>
                     <li><a href="https://drive.google.com/file/d/1YpcsbtHs68Fg6feIsVKfOb9XeVjdXN3S/view?usp=sharing"
                             target="_blank">RESUME</a></li>
-                    <li><a href="#my-projects">MY WORK</a></li>
+                    <li><a href="#my-projects">MY-WORK</a></li>
                 </ul>
             </div>
             <a href="javascript:void(0);" class="nav-burger-icon" onclick="myFunction()">
